[project]
name = "mldm-agent"
version = "0.2.0"
description = "Multi-Level Decision-Making Agent for law firm client comms"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Tanzir" }]

dependencies = [
    # web
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "slowapi>=0.1.9",

    # config + validation
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.1",

    # LLM stack
    "dspy-ai>=2.5.0",
    "langgraph>=0.2.40",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "openai>=1.50.0",
    "google-generativeai>=0.8.0",

    # infra
    "httpx>=0.27.0",
    "redis[hiredis]>=5.0.8",
    "sqlalchemy>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.2",
    "tenacity>=9.0.0",

    # observability
    "structlog>=24.4.0",
    "sentry-sdk[fastapi]>=2.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "respx>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
